# GenAI_Projects

./: .gitignore
AI_ALTEREGO/: README.md  (+5 more)
Context-Aware_AI_RAG_Assistant/: .gitignore  README.md  app.py  linkedin_post.md  linkedin_post.txt  persona_config.json  pyproject.toml  requirements.txt
Context-Aware_AI_RAG_Assistant/app/core/: personas.py
Context-Aware_AI_RAG_Assistant/app/rag/: embedder.py
Context-Aware_AI_RAG_Assistant/app/server/: ui_gradio.py
Context-Aware_AI_RAG_Assistant/app/tools/: kb_search.py  record_unknown_question.py
Context-Aware_AI_RAG_Assistant/kb/: README.md
Context-Aware_AI_RAG_Assistant/kb/faq/: 02-availability.md  06-projects-highlight.md  10-contact-information.md
Context-Aware_AI_RAG_Assistant/kb/projects/ Context-Aware_AI_RAG_Assistant/: README.md
Context-Aware_AI_RAG_Assistant/kb/projects/Context-Aware_AI_RAG_Assistant/: README.md
Context-Aware_AI_RAG_Assistant/kb/projects/deep-learning-image-classification-vgg-16vsresnet-18/: README.md
Context-Aware_AI_RAG_Assistant/kb/projects/multi-agent-weather-assistant/: README.md
Context-Aware_AI_RAG_Assistant/kb/projects/reinforcement-learning-grid-navigation-system/: README.md
Context-Aware_AI_RAG_Assistant/kb/projects/thermowatch-autoencoder/: README.md
Context-Aware_AI_RAG_Assistant/kb/projects/transformer-based-sentiment-analysis-yelp/: README.md
OpenAI_Agents_SDK/deep_research_pro/: .gitignore  MODE_IMPLEMENTATION_REVIEW.md  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  run_gradio.py  run_streamlit.py  streamlit_app.py  test_cache.py
OpenAI_Agents_SDK/deep_research_pro/app/: __init__.py  cli.py  run.py
OpenAI_Agents_SDK/deep_research_pro/app/agents/: __init__.py  file_summarizer_agent.py  planner_agent.py  report_qa_agent.py  search_agent.py  verifier_agent.py  writer_agent.py
OpenAI_Agents_SDK/deep_research_pro/app/core/: analytics_builder.py  cache_manager.py  openai_client.py  render.py  research_manager.py  retry.py  safe.py  semantic_chunker.py  sessions.py  settings.py  text.py  tracing.py
OpenAI_Agents_SDK/deep_research_pro/app/schemas/: __init__.py  analytics.py  plan.py  report.py  source.py  verify.py
OpenAI_Agents_SDK/deep_research_pro/app/tools/: hosted_tools.py
OpenAI_Agents_SDK/deep_research_pro/app/ui/: __init__.py  analytics_dashboard.py  gradio_app.py  styles.py  test_data.py
OpenAI_Agents_SDK/deep_research_pro/data/: eu_ai_act.md
OpenAI_Agents_SDK/deep_research_pro/tests/: __init__.py  test_cache_manager.py  test_integration.py  test_plan.py  test_research_manager.py  test_search.py  test_search_async.py  test_writer.py  test_writer_agent.py
wx-event-reliability/: README.md  pyproject.toml
wx-event-reliability/wx_event_reliability/: agent.py  prompt.py
wx-event-reliability/wx_event_reliability/sub_agents/: .env
(+65 files in other folders)
