[project]
name = "context-aware-ai-rag-assistant"
version = "0.1.0"
description = "Context-Aware AI RAG Assistant - Intelligent personal assistant with persona switching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio==5.33.1",
    "openai==1.85.0",
    "langchain-text-splitters==0.3.8",
    "langchain-community==0.3.24",
    "numpy==2.3.0",
    "faiss-cpu>=1.8.0",
    "requests==2.32.4",
    "python-dotenv==1.1.0",
    "pypdf==5.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
